[package]
name = "map_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[[bin]]
name = "map_generator"
path = "src/main.rs"

[lib]
name = "map_generator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]